Added the "BU.ModuleInit.PrintErrorMissingBashUtilsHomeFolder()" function

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -14,11 +14,8 @@
 ## TEXT PRINTING
 
 # Writing the command substitution text for the file systems description strings.
-function BU.Main.ModConfig.Filesystem.PrintFSLengthDescription()
-{
-    # shellcheck disable=SC2059
-    printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__MAX_LENGHT_STR_MSG}" "${?}";
-}
+# shellcheck disable=SC2059
+function BU.Main.ModConfig.Filesystem.PrintFSLengthDescription(){ printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__MAX_LENGHT_STR_MSG}" "${?}"; }
 
 # -----------------------------------------------
 
@@ -43,7 +40,7 @@ if [ "${__BU_MAIN_FS_NAME,,}" == 'apfs' ]; then
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
-        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription "Apple's APFS")" \
+        "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'APFS')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
