--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -17,11 +17,11 @@
 function BU.Main.ModConfig.Project.GetProjectFilePath()
 {
     #**** Variables ****
-    local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}";
-    local v_get_parent;
-    local find_path;
+    local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}";  # VAR TYPE : String     - DESC :
+    local v_get_parent;                                 # VAR TYPE : Dirpath    - DESC :
+    local find_path;                                    # VAR TYPE : Path       - DESC :
 
-    local v_return_code;
+    declare -i v_return_code;                           # VAR TYPE : Int        - DESC :
 
     #**** Code ****
     v_get_parent="$(cd "$(printf "%s" "${__BU_MAIN_PROJECT_FILE_PARENT}")" || \
