--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -32,7 +32,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent.Optimize() { pri
 function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 {
     #**** Variables ****
-    local v_lineno;
+    declare -i v_lineno; # VAR TYPE : Int   - DESC : Line number of a global variable declaration.
 
     #**** Code ****
 
@@ -178,7 +178,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 function BU.Main.ModConfig.Module.BUDevToolsPaths()
 {
     #**** Variables ****
-    local v_lineno;
+    declare -i v_lineno; # VAR TYPE : Int   - DESC : Line number of a global variable declaration.
 
     #**** Code ****
 
@@ -349,7 +349,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 function BU.Main.ModConfig.Module.BULibFolderContent()
 {
     #**** Variables ****
-    local v_lineno;
+    declare -i v_lineno; # VAR TYPE : Int   - DESC : Line number of a global variable declaration.
 
     #**** Code ****
 
@@ -446,7 +446,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 {
     #**** Variables ****
-    local v_lineno;
+    declare -i v_lineno; # VAR TYPE : Int   - DESC : Line number of a global variable declaration.
 
     #**** Code ****
     # ----------------------------------------------------------------------------------------------------------------------
@@ -699,7 +699,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 # shellcheck disable=SC2016,SC2059
 function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
     #**** Variables ****
-    local v_lineno;
+    declare -i v_lineno; # VAR TYPE : Int   - DESC : Line number of a global variable declaration.
 
     #**** Code
 
@@ -785,8 +785,8 @@ else
     fi
 
     # Checking if the "Bash-utils-root-val.path" file exists AND if this file contains a string (the wanted string here is the library's root folder path).
-    if [ -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ] && [ -s "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then ____bu_main_modconfig_lineno="${LINENO}";
-        __BU_MAIN_ROOT_DIR_PATH="$(cat "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}")";
+    if [ -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ] && [ -s "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then
+        __BU_MAIN_ROOT_DIR_PATH="$(cat "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}")"; declare -i ____bu_main_modconfig_lineno="${LINENO}";  # VAR TYPE : Int   - DESC : Line number of the "${__BU_MAIN_ROOT_DIR_PATH}" global variable declaration.
 
         # shellcheck disable=SC2059
         BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_ROOT_DIR_PATH' "${__BU_MAIN_ROOT_DIR_PATH}" 'Dirpath' \
@@ -794,7 +794,7 @@ else
             "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}")" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${____bu_main_modconfig_lineno}";
 
         # Checking if the library's root folder path written in this file is valid.
-        if [ ! -d "${__BU_MAIN_ROOT_DIR_PATH}" ]; then ____bu_main_modconfig_lineno="${LINENO}";
+        if [ ! -d "${__BU_MAIN_ROOT_DIR_PATH}" ]; then declare -i ____bu_main_modconfig_lineno="${LINENO}"; # VAR TYPE : Int   - DESC : Line number of the error occurence.
 
             BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____bu_main_modconfig_lineno}" "ERR_BU_MAIN_MOD_CONF__INVALID_ROOT_DIR_PATH"; echo >&2;
 
@@ -818,7 +818,7 @@ else
         fi
 
     # Checking if the "Bash-utils-root-val.path" file exists AND if this file is empty (no library's path specified).
-    elif [ -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ] && [ ! -s "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then ____bu_main_modconfig_lineno="${LINENO}";
+    elif [ -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ] && [ ! -s "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then declare -i ____bu_main_modconfig_lineno="${LINENO}"; # VAR TYPE : Int   - DESC : Line number of the error occurence.
 
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____bu_main_modconfig_lineno}" "ERR_BU_MAIN_MOD_CONF__EMPTY_ROOT_DIR_STORAGE_FILE_PATH";
 
@@ -840,7 +840,7 @@ else
 		return 1;
 
     # Checking if the current user cannot read the "Bash-utils-root-val.path" (file created and owned by the "root" user).
-    elif [ -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ] && [ ! -r "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then ____bu_main_modconfig_lineno="${LINENO}";
+    elif [ -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ] && [ ! -r "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then declare -i ____bu_main_modconfig_lineno="${LINENO}"; # VAR TYPE : Int   - DESC : Line number of the error occurence.
 
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____bu_main_modconfig_lineno}" "ERR_BU_MAIN_MOD_CONF__UNALLOWED_TO_READ_ROOT_DIR_STORAGE_FILE_PATH"
 
@@ -866,7 +866,7 @@ else
 		return 1;
 
     # Handling the absence of the "Bash-utils-root-val.path" file.
-    elif [ ! -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then ____bu_main_modconfig_lineno="${LINENO}";
+    elif [ ! -f "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" ]; then declare -i ____bu_main_modconfig_lineno="${LINENO}"; # VAR TYPE : Int   - DESC : Line number of the error occurence.
 
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____bu_main_modconfig_lineno}" "ERR_BU_MAIN_MOD_CONF__ABSENT_ROOT_DIR_STORAGE_FILE_PATH"
 
