--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -84,6 +84,7 @@ __BU_MAIN_TXT_LINES="$(tput lines || stty size | cut -d " " -f1)"
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "${__BU_MAIN_TXT_LINES}" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'lines')" "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
+exit 0;
 # -----------------------------------------------
 
 ## PRINTING CHARACTERS
