Added new translation functions in the initializer script, changed the variables description from "MANDATORY" to "REQUIRED", to fit with the "OPTIONAL" string length, and added a new required parameter to the "BU.ModuleInit.FindPath()" function

--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -27,14 +27,14 @@
 
 ## BASH UTIILS SUB-FOLDERS PATHS
 
-__BU_HARDWARE_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT__CONFIG_MODULES_DIR" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")")";
+__BU_HARDWARE_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT__CONFIG_MODULES_DIR" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')";
 
 # -----------------------------------------------
 
 ## "lib" FOLDER'S CONTENT.
 
 # Bash Utils "Hardware" module's library directory                                                  |   Default parent folder --> "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH/" (Bash-utils/lib/functions).
-__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")")"  || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"  "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
+__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')"  || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"  "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH"                                       'Dirpath' "This global variable stores the path of the « Hardware » module's functions folder"                                  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # -----------------------------------------------
@@ -47,26 +47,26 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'
 
 ## HARDWARE MODULE'S "config" FOLDER'S CONTENT
 
-__BU_HARDWARE_MODULE_CONF_FILE_AUDIO_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Audio.conf")";
-__BU_HARDWARE_MODULE_CONF_FILE_BATTERY_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Battery.conf")";
-__BU_HARDWARE_MODULE_CONF_FILE_CPU_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "CPU.conf")";
+__BU_HARDWARE_MODULE_CONF_FILE_AUDIO_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Audio.conf" 'f')";
+__BU_HARDWARE_MODULE_CONF_FILE_BATTERY_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Battery.conf" 'f')";
+__BU_HARDWARE_MODULE_CONF_FILE_CPU_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "CPU.conf" 'f')";
 
-__BU_HARDWARE_MODULE_CONF_FILE_DRIVE_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Drive.conf")";
-__BU_HARDWARE_MODULE_CONF_FILE_KEYBOARD_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Keyboard.conf")";
-__BU_HARDWARE_MODULE_CONF_FILE_MEMORY_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Memory.conf")";
+__BU_HARDWARE_MODULE_CONF_FILE_DRIVE_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Drive.conf" 'f')";
+__BU_HARDWARE_MODULE_CONF_FILE_KEYBOARD_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Keyboard.conf" 'f')";
+__BU_HARDWARE_MODULE_CONF_FILE_MEMORY_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Memory.conf" 'f')";
 
-__BU_HARDWARE_MODULE_CONF_FILE_MOTHERBOARD_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Motherboard.conf")";
-__BU_HARDWARE_MODULE_CONF_FILE_MOUSE_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Mouse.conf")";
-__BU_HARDWARE_MODULE_CONF_FILE_PORTS_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Ports.conf")";
+__BU_HARDWARE_MODULE_CONF_FILE_MOTHERBOARD_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Motherboard.conf" 'f')";
+__BU_HARDWARE_MODULE_CONF_FILE_MOUSE_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Mouse.conf" 'f')";
+__BU_HARDWARE_MODULE_CONF_FILE_PORTS_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Ports.conf" 'f')";
 
-__BU_HARDWARE_MODULE_CONF_FILE_TOUCHPAD_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Touchpad.conf")";
+__BU_HARDWARE_MODULE_CONF_FILE_TOUCHPAD_PATH="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_CONF_DIR_PATH" "Touchpad.conf" 'f')";
 
 # -----------------------------------------------
 
 ## HARDWARE MODULE'S INITIALIZER PATH
 
 # Hardware module's initializer file.
-__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH" "Initializer.sh")" || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"                    "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
+__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH" "Initializer.sh" 'f')" || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"                    "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
 
 # -----------------------------------------------
 
@@ -80,7 +80,7 @@ if BU.Main.OS.IsBSD; then
 
     BU.ModuleInit.Msg "Operating system : $v_hardware_modinit_bsd_sys"; BU.ModuleInit.Msg;
 
-    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "BSD")";
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "BSD" 'd')";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
@@ -92,7 +92,7 @@ fi
 BU.Main.OS.IsHaiku && {
     BU.ModuleInit.Msg "Operating system : Haiku"; BU.ModuleInit.Msg;
 
-    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Haiku")";
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Haiku" 'd')";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
@@ -102,7 +102,7 @@ BU.Main.OS.IsHaiku && {
 BU.Main.OS.IsLinux && {
     BU.ModuleInit.Msg "Operating system : Linux"; BU.ModuleInit.Msg;
 
-    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Linux")";
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Linux" 'd')";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
@@ -112,7 +112,7 @@ BU.Main.OS.IsLinux && {
 BU.Main.OS.IsOSX && {
     BU.ModuleInit.Msg "Operating system : Mac OSX"; BU.ModuleInit.Msg;
 
-    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "OSX")";
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "OSX" 'd')";
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system."                                "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
