--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -29,7 +29,7 @@ function BU.Main.ModConfig.Project.GetProjectFilePath()
             echo >&2; "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__PROJECT__GetProjectFilePath__UNABLE_TO_GET_THE_PARENT_DIR}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))")" >&2; echo >&2; return 1;
         }; pwd)";
 
-    find_path="$(BU.ModuleInit.FindPath "${v_get_parent}" "${v_cut}")"; v_return_code="${?}";
+    find_path="$(BU.ModuleInit.FindPath "${v_get_parent}" "${v_cut}" 'f')"; v_return_code="${?}";
 
     [[ "${v_return_code}" -ne 0 ]] && return 1;
 
