--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -42,7 +42,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_BIN_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "bin")" || {
+    __BU_MAIN_MODULE_BIN_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "bin" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -69,7 +69,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT__CONFIG_MODULES_DIR}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")")" || {
+    __BU_MAIN_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT__CONFIG_MODULES_DIR}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -95,7 +95,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_DOCS_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "docs")" || {
+    __BU_MAIN_MODULE_DOCS_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "docs" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -122,7 +122,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_LIB_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "lib")" || {
+    __BU_MAIN_MODULE_LIB_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "lib" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -149,7 +149,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_RES_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "res")" || {
+    __BU_MAIN_MODULE_RES_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_ROOT_DIR_PATH}" "res" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -188,7 +188,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_RES_DIR_PATH}" "dev-tools")" || {
+    __BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_RES_DIR_PATH}" "dev-tools" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -213,7 +213,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
     # ---------------------------------------------------------------------------------------------------------------------------------
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_DEVTOOLS_BIN="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-bin")" || {
+    __BU_MAIN_MODULE_DEVTOOLS_BIN="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-bin" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -240,7 +240,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_DEVTOOLS_DSK="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-desktop")" || {
+    __BU_MAIN_MODULE_DEVTOOLS_DSK="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-desktop" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -267,7 +267,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_DEVTOOLS_IMG="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-img")" || {
+    __BU_MAIN_MODULE_DEVTOOLS_IMG="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-img" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -294,7 +294,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_DEVTOOLS_SRC="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-src")" || {
+    __BU_MAIN_MODULE_DEVTOOLS_SRC="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-src" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -320,7 +320,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_DEVTOOLS_TRANSL="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-translations")" || {
+    __BU_MAIN_MODULE_DEVTOOLS_TRANSL="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH}" "dev-translations" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -359,7 +359,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_DIR_PATH}" "functions")" || {
+    __BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_DIR_PATH}" "functions" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -385,7 +385,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")")" || {
+    __BU_MAIN_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -411,7 +411,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_LIB_LANG_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_DIR_PATH}" "lang")" || {
+    __BU_MAIN_MODULE_LIB_LANG_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_LIB_DIR_PATH}" "lang" 'd')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -454,7 +454,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
     # ----------------------------------------------------------------------------------------------------------------------
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Colors.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Colors.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -481,7 +481,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_BG_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "ColorsBG.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_BG_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "ColorsBG.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -508,7 +508,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_TEXT_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "ColorsText.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_TEXT_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "ColorsText.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -535,7 +535,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_EXIT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Exit.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_EXIT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Exit.conf" 'f')" || {
         .ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -561,7 +561,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Filesystem.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Filesystem.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -588,7 +588,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_INIT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Project.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_INIT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Project.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -615,7 +615,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_STATUS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Status.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_STATUS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Status.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -642,7 +642,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_TEXT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Text.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_TEXT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Text.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -669,7 +669,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_TIME_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Time.conf")" || {
+    __BU_MAIN_MODULE_CONF_FILE_TIME_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Time.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -709,7 +709,7 @@ function BU.Main.ModConfig.Module.MainModuleInitializerPath() {
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH}" "Initializer.sh")" || {
+    __BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH}" "Initializer.sh" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
