Huge save : best practices compliance, file description and every language name in current language in lang.csv

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -29,7 +29,7 @@ function BU.Main.ModConfig.Filesystem.PrintFSLengthDescription(){ printf "${__BU
 
 #### PROCESSING FILE SYSTEM'S INFORMATIONS
 
-# Getting the file system's name with the "df" command, and parsing the output list according to the operating system's command version.
+# Getting the file system's name with the "$(df)" command, and parsing the output list according to the operating system's command version.
 BU.Main.OS.IsHaiku && __BU_MAIN_FS_NAME="$(df "$0" | awk 'FNR == 4 {print $3}')";
 BU.Main.OS.IsLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
 
