--- a/install/.Bash-utils/config/modules/main/debug.conf
+++ b/install/.Bash-utils/config/modules/main/debug.conf
@@ -16,7 +16,7 @@ function debug()
 			echo -ne "+"
 		done
 
-		echo -ne "$__BU_MAIN_COLOR_TXT_RESET"; echo -e; echo -e
+		echo -ne "${__BU_MAIN_COLOR_TXT_RESET}"; echo -e; echo -e
 
 		echo -e "${__BU_MAIN_COLOR_TXT_YELLOW}FUNCTION ${__BU_MAIN_COLOR_TXT_PINK}$p_function${__BU_MAIN_COLOR_TXT_YELLOW} IN ${__BU_MAIN_COLOR_TXT_PINK}$p_file${__BU_MAIN_COLOR_TXT_YELLOW}, ON ${__BU_MAIN_COLOR_TXT_PINK}$p_line${__BU_MAIN_COLOR_TXT_RESET}"
 
@@ -26,6 +26,6 @@ function debug()
                         echo -ne "+"
 		done
 
-		echo -ne "$__BU_MAIN_COLOR_TXT_RESET"; echo -e; echo -e
+		echo -ne "${__BU_MAIN_COLOR_TXT_RESET}"; echo -e; echo -e
 	fi
 }
