--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -38,7 +38,7 @@ function BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName()
 
 # shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize() {
-    # $1 -> Variable's name | $2 -> "$(basename "${BASH_SOURCE[0]}")" | $3 -> LINENO (line number)
+    # ${1} -> Variable's name | ${2} -> "$(basename "${BASH_SOURCE[0]}")" | ${3} -> LINENO (line number)
     BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${3}" 'E_BUINIT__BU_MAIN_MODCONFIG__COLOR_VAR_NOT_INIT';
 
     case "${4^^}" in
