--- a/install/.Bash-utils/config/modules/main/debug.conf
+++ b/install/.Bash-utils/config/modules/main/debug.conf
@@ -4,28 +4,28 @@
 function debug()
 {
 	#**** Parameters ****
-	p_function=$1
-	p_file=$2
-	p_line=$3
+	p_function=${1:-$'\0'};
+	p_file=${2:-$'\0'};
+	p_line=${3:-$'\0'};
 
 	#**** Code ****
-	if [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
-		echo -ne "$__BU_MAIN_COLOR_TXT_PINK"
+	if [ "${__BU_MODULE_INIT_STAT_DEBUG}" = 'true' ]; then
+		echo -ne "${__BU_MAIN_COLOR_TXT_PINK}";
 
-		for _ in $(eval echo -e "{1..$__BU_MAIN_TXT_COLS}"); do
-			echo -ne "+"
+		for _ in $(eval echo -e "{1..${__BU_MAIN_TXT_COLS}}"); do
+			echo -ne "+";
 		done
 
-		echo -ne "${__BU_MAIN_COLOR_TXT_RESET}"; echo -e; echo -e
+		echo -ne "${__BU_MAIN_COLOR_TXT_RESET}"; echo -e; echo -e;
 
-		echo -e "${__BU_MAIN_COLOR_TXT_YELLOW}FUNCTION ${__BU_MAIN_COLOR_TXT_PINK}$p_function${__BU_MAIN_COLOR_TXT_YELLOW} IN ${__BU_MAIN_COLOR_TXT_PINK}$p_file${__BU_MAIN_COLOR_TXT_YELLOW}, ON ${__BU_MAIN_COLOR_TXT_PINK}$p_line${__BU_MAIN_COLOR_TXT_RESET}"
+		echo -e "${__BU_MAIN_COLOR_TXT_YELLOW}FUNCTION ${__BU_MAIN_COLOR_TXT_PINK}${p_function}${__BU_MAIN_COLOR_TXT_YELLOW} IN ${__BU_MAIN_COLOR_TXT_PINK}$p_file${__BU_MAIN_COLOR_TXT_YELLOW}, ON ${__BU_MAIN_COLOR_TXT_PINK}${p_line}${__BU_MAIN_COLOR_TXT_RESET}";
 
-		echo -ne "$__BU_MAIN_COLOR_TXT_PINK"
+		echo -ne "${__BU_MAIN_COLOR_TXT_PINK}";
 
 		for _ in $(eval echo -e "{1..$__BU_MAIN_TXT_COLS}"); do
-                        echo -ne "+"
+                        echo -ne "+";
 		done
 
-		echo -ne "${__BU_MAIN_COLOR_TXT_RESET}"; echo -e; echo -e
+		echo -ne "${__BU_MAIN_COLOR_TXT_RESET}"; echo -e; echo -e;
 	fi
 }
