--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -45,7 +45,7 @@ function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "${__BU_MODULE_
 
 # Writing the name of the variable that could not be initialized with it's command substitution.
 function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() {
-    # $1 -> Variable's name | $2 -> "$(basename "${BASH_SOURCE[0]}")" | $3 -> LINENO (line number)
+    # ${1} -> Variable's name | ${2} -> "$(basename "${BASH_SOURCE[0]}")" | ${3} -> LINENO (line number)
     BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "$(( LINENO - 2 ))" 'E_BUINIT__BU_MAIN_MODCONFIG__TEXT_VAR_NOT_INIT';
 
     # shellcheck disable=SC2059
