--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -44,7 +44,7 @@ elif [ "${__BU_MODULE_INIT_STAT_DEBUG}" == 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXCatConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXCat.conf";
+        BashXCatConf="${____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir}/BashXCat.conf";
 
         # If the "" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "${BashXCatConf}" ] && [ -s "${BashXCatConf}" ]; then
@@ -70,7 +70,7 @@ elif [ "${__BU_MODULE_INIT_STAT_DEBUG}" == 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXFilesConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXFiles.conf";
+        BashXFilesConf="${____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir}/BashXFiles.conf";
 
         # If the "BashXFiles.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "${BashXFilesConf}" ] && [ -s "${BashXFilesConf}" ]; then
@@ -96,7 +96,7 @@ elif [ "${__BU_MODULE_INIT_STAT_DEBUG}" == 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXFNCTConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXFNCT.conf";
+        BashXFNCTConf="${____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir}/BashXFNCT.conf";
 
         # If the "BashXFNCT.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "${BashXFNCTConf}" ] && [ -s "${BashXFNCTConf}" ]; then
@@ -122,7 +122,7 @@ elif [ "${__BU_MODULE_INIT_STAT_DEBUG}" == 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXModulesConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXModules.conf";
+        BashXModulesConf="${____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir}/BashXModules.conf";
 
         # If the "BashXModules.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "${BashXModulesConf}" ] && [ -s "${BashXModulesConf}" ]; then
@@ -144,7 +144,7 @@ elif [ "${__BU_MODULE_INIT_STAT_DEBUG}" == 'true' ]; then
 
         # Every values are case-insensitive.
 
-        BashXSubCatConf="$____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir/BashXSubCat.conf";
+        BashXSubCatConf="${____v_bu_module_init_stat_debug_bashx_status_conf_files_parent_dir}/BashXSubCat.conf";
 
         # If the "BashXSubCat.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
         if [ -f "${BashXSubCatConf}" ] && [ -s "${BashXSubCatConf}" ]; then
