--- a/install/.Bash-utils/config/modules/main/debug.conf
+++ b/install/.Bash-utils/config/modules/main/debug.conf
@@ -22,7 +22,7 @@ function debug()
 
 		echo -ne "${__BU_MAIN_COLOR_TXT_PINK}";
 
-		for _ in $(eval echo -e "{1..$__BU_MAIN_TXT_COLS}"); do
+		for _ in $(eval echo -e "{1..${__BU_MAIN_TXT_COLS}}"); do
                         echo -ne "+";
 		done
 
